<resources>
    <string name="app_name">Pedometer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Pedometer</string>

    <string name="dashboard_weight_panel_title">Weight</string>
    <string name="dashboard_calories_panel_title">Calories</string>

    <string name="start_detection">Start step detection</string>
    <string name="stop_detection">Stop step detection</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_calibrate">Set steps/mile</string>
    <string name="nav_setweight">Set weight</string>
    <string name="nav_achievements">Achievements</string>
    <string name="nav_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_default_units">Default units</string>
    <string-array name="pref_unit_options_text">
        <item>Pounds and miles</item>
        <item>Kilograms and kilometers</item>
    </string-array>
    <string-array name="pref_unit_options_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="pref_title_walking_type">Walking type</string>
    <string-array name="pref_walking_options_text">
        <item>Casual walking</item>
        <item>Brisk walking</item>
    </string-array>
    <string-array name="pref_walking_options_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_set_weight">Set weight</string>
    <string name="set_weight_save">Save weight</string>
    <string-array name="weight_units">
        <item>Pounds</item>
        <item>Kilograms</item>
    </string-array>

</resources>
