<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="1,2"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tk.dogeshrine.pedometer.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/weight_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_span="2"
            android:gravity="center">

            <TextView
                android:id="@+id/weight_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_weight_panel_title" />

            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/weight_label"
                android:text="0" />

            <TextView
                android:id="@+id/weight_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/weight_label"
                android:layout_toEndOf="@id/weight"
                android:layout_toRightOf="@id/weight"
                android:text=" lbs" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/steps_per_mile_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:gravity="center">

            <TextView
                android:id="@+id/steps_per_mile_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Steps/mile" />

            <TextView
                android:id="@+id/steps_per_mile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/steps_per_mile_label"
                android:text="Not set." />
        </RelativeLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_span="2"
            android:gravity="center_vertical|center_horizontal"
            android:text="Steps" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textSteps"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_column="1"
            android:layout_span="2"
            android:gravity="center_vertical|center|center_horizontal"
            android:text="0"
            android:textSize="40sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textViewSensitivityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_span="2"
            android:gravity="center_vertical|center_horizontal"
            android:text="Step detection sensitivity" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:max="19" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRowLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/calories_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_span="2"
            android:gravity="center">

            <TextView
                android:id="@+id/calories_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_calories_panel_title" />

            <TextView
                android:id="@+id/calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/calories_label"
                android:text="---" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/calories_label"
                android:layout_toEndOf="@id/calories"
                android:layout_toRightOf="@id/calories"
                android:text=" cal" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/calories_per_step_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:gravity="center">

            <TextView
                android:id="@+id/calories_per_step_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Calories/step" />

            <TextView
                android:id="@+id/calories_per_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/calories_per_step_label"
                android:text="---" />
        </RelativeLayout>

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/stepDetectionButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/start_detection"
            android:onClick="toggleStepDetection"
            android:layout_column="1"
            android:layout_span="2" />
    </TableRow>

</TableLayout>
